remove unneeded dependencies from binary